# durable-execution-benchmark

./: README.md
dbos-application/: README.md  dbos-config.yaml  pyproject.toml
dbos-application/app/: main.py
dbos-application/tests/: conftest.py  test_application.py
reference-application/: README.md  pyproject.toml
reference-application/app/: main.py
reference-application/tests/: conftest.py  test_application.py
temporal-application/: README.md  client.py  pyproject.toml
temporal-application/app/: index.py  main.py
temporal-application/temporal/: activities.py  temporal.py  workflows.py
temporal-application/tests/: conftest.py  test_application.py
