[project]
name = "reference-application"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "dbos>=0.23.0",
    "fastapi[standard]>=0.115.11",
    "isort>=6.0.1",
    "llama-index>=0.12.23",
    "llama-index-vector-stores-postgres>=0.4.2",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.pytest.ini_options]
addopts = "-s"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(name)s:%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "INFO"
log_cli = true
